{
  "version": 4,
  "terraform_version": "0.14.2",
  "serial": 72,
  "lineage": "0a405b90-f526-2004-0d4b-f5fd84ca6664",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-9642cde8",
            "id": "rtb-9642cde8",
            "owner_id": "929327065333",
            "propagating_vgws": null,
            "route": [],
            "tags": null,
            "vpc_id": "vpc-41d1d13b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:929327065333:vpc/vpc-41d1d13b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-e88ee595",
            "default_route_table_id": "rtb-9642cde8",
            "default_security_group_id": "sg-e633c1c8",
            "dhcp_options_id": "dopt-d29e33a8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-41d1d13b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-9642cde8",
            "owner_id": "929327065333"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0232602f0f07748fc",
            "owner_id": "929327065333",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07b7844a8fd17a638",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "1.1.1.1/32",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07b7844a8fd17a638",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rr"
            },
            "vpc_id": "vpc-0a5666c0cfc366714"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:929327065333:vpc/vpc-0a5666c0cfc366714",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-081a06acb9d092caf",
            "default_route_table_id": "rtb-0aa0a93a2960854a1",
            "default_security_group_id": "sg-0b1ad864ecd584998",
            "dhcp_options_id": "dopt-d29e33a8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a5666c0cfc366714",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0aa0a93a2960854a1",
            "owner_id": "929327065333"
          }
        }
      ]
    }
  ]
}